Do not close a file when it is removed from a project. Fixes the crash when deleting a file which is part of a project from the tab context menu.

Change some Delete button to Remove.

BUG: 111134